--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # Do not change
-config-version: '10'
+config-version: '11'
 
 config:
   # Language
@@ -24,6 +24,7 @@ config:
     TAB-BC: false
     # TrChat
     TrChat: false
+    TrChat-private-channel: 'Private'
 
   # Your namespace
   # If you don't know how font works, don't change this
