--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.0.7.1'
+version = '2.2.0.7.3'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
@@ -34,6 +34,7 @@ dependencies {
     implementation ('net.kyori:adventure-text-minimessage:4.13.1')
     implementation ('net.kyori:adventure-text-serializer-gson:4.13.1')
     implementation ("org.bstats:bstats-bukkit:3.0.1")
+    implementation fileTree (dir:'libs',includes:['BiomeAPI.jar'])
 }
 
 def targetJavaVersion = 17
@@ -41,9 +42,6 @@ java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
 }
 
 tasks.withType(JavaCompile).configureEach {
