--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.0.7.3'
+version = '2.2.0.8'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
@@ -29,10 +29,11 @@ dependencies {
     compileOnly ('org.geysermc.floodgate:api:2.0-SNAPSHOT')
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
     compileOnly ('com.github.LoneDev6:api-itemsadder:3.2.3c')
-    implementation ('net.kyori:adventure-api:4.13.1')
+    compileOnly ('com.github.FrancoBM12:API-MagicCosmetics:2.2.0')
+    implementation ('net.kyori:adventure-api:4.14.0')
     implementation ('net.kyori:adventure-platform-bukkit:4.3.0')
-    implementation ('net.kyori:adventure-text-minimessage:4.13.1')
-    implementation ('net.kyori:adventure-text-serializer-gson:4.13.1')
+    implementation ('net.kyori:adventure-text-minimessage:4.14.0')
+    implementation ('net.kyori:adventure-text-serializer-gson:4.14.0')
     implementation ("org.bstats:bstats-bukkit:3.0.1")
     implementation fileTree (dir:'libs',includes:['BiomeAPI.jar'])
 }
@@ -61,6 +62,7 @@ processResources {
 shadowJar {
     relocate ('net.kyori', 'net.momirealms.customnameplates.libs.net.kyori')
     relocate ('org.bstats', 'net.momirealms.customnameplates.libs.org.bstats')
+    relocate ('net.momirealms', 'net.momirealms.customnameplates.libs.net.momirealms')
 }
 
 tasks.register("delete", Delete).get().delete("build/libs/"+project.name+"-"+project.version+".jar")
