--- a/build.gradle
+++ b/build.gradle
@@ -4,32 +4,32 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.1.0-hotfix'
+version = '2.2.2.0'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
-    maven {name = 'papermc-repo'; url = 'https://papermc.io/repo/repository/maven-public/'}
     maven {name = 'sonatype'; url = 'https://oss.sonatype.org/content/groups/public/'}
     maven {name = "dmulloy2-repo"; url = "https://repo.dmulloy2.net/repository/public/"}
     maven {name = "clip-repo"; url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'}
     maven {name = "jitpack"; url = 'https://jitpack.io'}
     maven {name = "codecrafter47-repo"; url = 'https://nexus.codecrafter47.de/content/repositories/public/'}
     maven {name = "opencollab-snapshot-repo"; url = 'https://repo.opencollab.dev/main/'}
-    mavenCentral()
+    maven {name = 'papermc-repo'; url = 'https://papermc.io/repo/repository/maven-public/'}
+    mavenLocal()
 }
 
 dependencies {
     compileOnly fileTree(dir:'libs',includes:['*.jar'])
-    compileOnly ('io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT')
+    compileOnly ('io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT')
     compileOnly ('me.clip:placeholderapi:2.11.3')
     compileOnly ('com.zaxxer:HikariCP:5.0.1')
     compileOnly ('commons-io:commons-io:2.11.0')
     compileOnly ('dev.dejvokep:boosted-yaml:1.3')
-    compileOnly ('org.geysermc.geyser:api:2.1.0-SNAPSHOT')
-    compileOnly ('org.geysermc.floodgate:api:2.0-SNAPSHOT')
+//    compileOnly ('org.geysermc.geyser:api:2.1.0-SNAPSHOT')
+//    compileOnly ('org.geysermc.floodgate:api:2.0-SNAPSHOT')
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
-    compileOnly ('com.github.LoneDev6:api-itemsadder:3.2.3c')
-    compileOnly ('com.github.FrancoBM12:API-MagicCosmetics:2.2.0')
+    compileOnly ('com.github.LoneDev6:api-itemsadder:3.4.1-r4')
+    compileOnly ('org.apache.commons:commons-lang3:3.12.0')
     implementation ('net.kyori:adventure-api:4.14.0')
     implementation ('net.kyori:adventure-platform-bukkit:4.3.0')
     implementation ('net.kyori:adventure-text-minimessage:4.14.0')
