--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.2.0'
+version = '2.2.3.0'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
@@ -15,16 +15,16 @@ repositories {
     maven {name = "codecrafter47-repo"; url = 'https://nexus.codecrafter47.de/content/repositories/public/'}
     maven {name = "opencollab-snapshot-repo"; url = 'https://repo.opencollab.dev/main/'}
     maven {name = 'papermc-repo'; url = 'https://papermc.io/repo/repository/maven-public/'}
-    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
     compileOnly fileTree(dir:'libs',includes:['*.jar'])
-    compileOnly ('io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT')
+    compileOnly('dev.folia:folia-api:1.20.1-R0.1-SNAPSHOT')
     compileOnly ('me.clip:placeholderapi:2.11.3')
     compileOnly ('com.zaxxer:HikariCP:5.0.1')
     compileOnly ('commons-io:commons-io:2.11.0')
-    compileOnly ('dev.dejvokep:boosted-yaml:1.3')
+    compileOnly ('dev.dejvokep:boosted-yaml:1.3.1')
 //    compileOnly ('org.geysermc.geyser:api:2.1.0-SNAPSHOT')
 //    compileOnly ('org.geysermc.floodgate:api:2.0-SNAPSHOT')
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
