--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -64,7 +64,7 @@ resource-pack:
   initial-char: '뀁'
   # Unicode Support for 1.20+ clients
   # This would make your resource pack about 900KB bigger
-  support-1_20-unicodes: false
+  support-1_20-unicodes: true
 
 other-settings:
   # default width
