--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.3.1-hotfix'
+version = '2.2.3.2'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
+    maven {name = "sk89q-repo"; url = "https://maven.enginehub.org/repo/"}
     maven {name = 'sonatype'; url = 'https://oss.sonatype.org/content/groups/public/'}
     maven {name = "dmulloy2-repo"; url = "https://repo.dmulloy2.net/repository/public/"}
     maven {name = "clip-repo"; url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'}
@@ -25,8 +26,7 @@ dependencies {
     compileOnly ('com.zaxxer:HikariCP:5.0.1')
     compileOnly ('commons-io:commons-io:2.11.0')
     compileOnly ('dev.dejvokep:boosted-yaml:1.3.1')
-//    compileOnly ('org.geysermc.geyser:api:2.1.0-SNAPSHOT')
-//    compileOnly ('org.geysermc.floodgate:api:2.0-SNAPSHOT')
+    compileOnly ("com.comphenix.protocol:ProtocolLib:5.0.0")
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
     compileOnly ('com.github.LoneDev6:api-itemsadder:3.4.1-r4')
     compileOnly ('org.apache.commons:commons-lang3:3.12.0')
