--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,6 +13,8 @@ softdepend:
   - Oraxen
   - TrChat
   - MagicCosmetics
+  - CMI
+  - LibsDisguises
 commands:
   customnameplates:
     usage: /customnameplates
