--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.3.6'
+version = '2.2.3.8'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
@@ -29,6 +29,9 @@ dependencies {
     compileOnly ("com.comphenix.protocol:ProtocolLib:5.0.0")
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
     compileOnly ('com.github.LoneDev6:api-itemsadder:3.4.1-r4')
+
+    compileOnly 'com.github.Xiao-MoMi:Custom-Fishing:2.0-beta-4'
+
     compileOnly ('org.apache.commons:commons-lang3:3.12.0')
     implementation ('net.kyori:adventure-api:4.14.0')
     implementation ('net.kyori:adventure-platform-bukkit:4.3.0')
