--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.momirealms'
-version = '2.2.3.12'
+version = '2.2.3.14.1'
 
 repositories {
     maven {name = "aliyun-repo"; url = "https://maven.aliyun.com/repository/public/"}
@@ -16,6 +16,8 @@ repositories {
     maven {name = "codecrafter47-repo"; url = 'https://nexus.codecrafter47.de/content/repositories/public/'}
     maven {name = "opencollab-snapshot-repo"; url = 'https://repo.opencollab.dev/main/'}
     maven {name = 'papermc-repo'; url = 'https://papermc.io/repo/repository/maven-public/'}
+    maven {name = 'William278-repo'; url = 'https://repo.william278.net/releases/'}
+    maven {name = 'kryptonmc-repo'; url = 'https://repo.kryptonmc.org/releases'}
     mavenCentral()
 }
 
@@ -26,10 +28,13 @@ dependencies {
     compileOnly ('com.zaxxer:HikariCP:5.0.1')
     compileOnly ('commons-io:commons-io:2.11.0')
     compileOnly ('dev.dejvokep:boosted-yaml:1.3.1')
-    compileOnly ("com.comphenix.protocol:ProtocolLib:5.0.0")
+    compileOnly ("com.comphenix.protocol:ProtocolLib:5.1.0")
     compileOnly ('net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT')
     compileOnly ('com.github.LoneDev6:api-itemsadder:3.4.1-r4')
     compileOnly ("com.velocitypowered:velocity-api:3.1.1")
+    compileOnly ('org.geysermc.geyser:api:2.2.0-SNAPSHOT')
+    compileOnly ("net.william278:velocitab:1.5.1")
+    compileOnly ('me.neznamy:tab-api:4.0.2')
     annotationProcessor ('com.velocitypowered:velocity-api:3.1.1')
 
     compileOnly ('org.apache.commons:commons-lang3:3.12.0')
