--- a/paper/src/main/resources/configs/nameplate.yml
+++ b/paper/src/main/resources/configs/nameplate.yml
@@ -1,7 +1,9 @@
 # Team / Unlimited / Disable
 mode: TEAM
 
-# If you are using BungeeCord/Velocity, it's advised to install CustomNameplates on proxy too and enable this option.
+# You should enable this when you are
+# ① using Velocitab by William278 on Velocity
+# ② using TAB by NEZNAMY on BungeeCord
 proxy: false
 
 # The duration (in seconds) that the nameplate preview will last for.
